external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/syntaxErrors14.scxml.errors
:/tst_parser/data/syntaxErrors14.scxml:5:59: error: Unknown element If
:/tst_parser/data/syntaxErrors14.scxml:7:17: error: Error parsing SCXML file: Opening and ending tag mismatch.
