external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/syntaxErrors14.scxml
<?xml version="1.0" ?>
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0">
    <state id="wrapper">
        <transition event="OP.INSERT">
            <If cond="_event.data.operator == 'OPER.PLUS'">
                <assign location="long_expr" expr="long_expr+'+'" />
            </if>
        </transition>
    </state>
</scxml>
